--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,60 +28,30 @@ body {
 
 /* globals.css */
 
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  outline: none;
-  list-style: none;
-  word-wrap: break-word;
-}
-
-body {
-  font-family: 'Poppins', sans-serif;
-  font-size: 15px;
-  line-height: 26px;
-  font-weight: 400;
-  letter-spacing: 0.5px;
-  color: #333333;
-  overflow-x: hidden;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  color: #333333;
-  font-weight: 600;
-}
-
 html {
   scroll-behavior: smooth;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
+.main_header.sticky_menu {
+  position: fixed;
+  width: 100%;
+  height: 60px;
+  padding: 10px 0;
+  top: 0;
+  background: #1a202c;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.32);
+  -moz-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.32);
+  box-shadow: 0px 1px 15px rgba(0, 0, 0, 0.1);
+  z-index: 4;
 }
 
-ul {
-  padding: 0;
-  list-style: none;
+.main_header.sticky_menu {
+  background-color: #F5F5F5;
+  color: #1a202c
 }
-
-p {
-  font-weight: 400;
-  font-family: 'Poppins', sans-serif;
-  margin: 0;
-  font-size: 15px;
-  color: #fff;
-  letter-spacing: 0;
-}
-
-a:hover {
-  text-decoration: none;
-  outline: none;
-}
-
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
