--- a/src/css/animated-headline.css
+++ b/src/css/animated-headline.css
@@ -1,27 +1,3 @@
-.cd-title {
-  position: relative;
-}
-
-.cd-intro {
-  width: 90%;
-  max-width: 768px;
-  text-align: center;
-}
-
-.cd-intro {
-  margin: 4em auto;
-}
-@media only screen and (min-width: 768px) {
-  .cd-intro {
-    margin: 5em auto;
-  }
-}
-@media only screen and (min-width: 1170px) {
-  .cd-intro {
-    margin: 6em auto;
-  }
-}
-
 .cd-words-wrapper {
   display: inline-block;
   position: relative;
@@ -37,10 +13,10 @@
 .cd-words-wrapper b.is-visible {
   position: relative;
 }
-.no-js .cd-words-wrapper b {
+.cd-words-wrapper b {
   opacity: 0;
 }
-.no-js .cd-words-wrapper b.is-visible {
+.cd-words-wrapper b.is-visible {
   opacity: 1;
 }
 
